fix: text align justify for description

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -112,4 +112,5 @@ html {
     font-style: italic;
     border-left: 3px solid white;
     padding-left: 21px;
+    text-align: justify;
 }
